--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,6 +7,9 @@ pipeline {
                 script {
                     echo 'Hello World'
                     echo "${J_V}"
+                    echo "===>>> ${env.data}"
+                    echo "------------------"
+                    echo "===>>> ${params.data}"
                     def json = readJSON text: env.data
                     println("JSON:\n${json}")
                 }
